add validateForm method

--- a/css/index.css
+++ b/css/index.css
@@ -36,4 +36,10 @@ form {
 #updateTip {
   background: #457dd8;
   color: #ffffff;
+  cursor: pointer;
+}
+#forceValidate {
+  background: #457dd8;
+  color: #ffffff;
+  cursor: pointer;
 }
