--- a/less/index.less
+++ b/less/index.less
@@ -37,4 +37,10 @@ form{
 #updateTip{
   background:#457dd8;
   color:#ffffff;
+  cursor: pointer;
+}
+#forceValidate{
+  background:#457dd8;
+  color:#ffffff;
+  cursor: pointer;
 }
